# deltabeat

./: README.md  ROADMAP.md  pyproject.toml  requirements.txt
.github/workflows/: LICENSE  ci.yml  publish.yml
deltabeat/core/: __init__.py  beat.py  beat_pattern.py  event.py  make_events.py  motif.py  pattern.py  track.py
deltabeat/lib/: custom_beat.py  custom_motif.py  pitch_beat.py  pitch_motif.py  repeat_beat.py  repeat_motif.py  scale_beat.py  scale_motif.py
deltabeat/ui/: render.py
examples/: track_image.py
src/deltabeat/: __init__.py
src/deltabeat/core/: event.py  multi_track.py
src/deltabeat/lib/: custom_motif.py  pitch_motif.py  scale_motif.py
src/deltabeat/ui/: render.py
src/migration/: main.py  simple.mid
src/migration/deltabeat/: __init__.py  audio.py  core.py  midi.py  modifier.py  score.py
tests/: test_beat_pattern.py  test_custom_beat.py  test_custom_motif.py  test_event.py  test_make_events.py  test_multi_track.py  test_pattern.py  test_pitch_beat.py  test_pitch_motif.py  test_repeat_beat.py  test_repeat_motif.py  test_scale_beat.py  test_scale_motif.py  test_track.py
