[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "deltabeat"
version = "0.0.1"
description = "Compositional tools for time-warped music"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Alex Allmont" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
]

[project.optional-dependencies]
test = [
    "pytest",
    "numpy",
    "Pillow",
]
dev = [
    "build",
    "pytest",
    "twine",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/alexallmont/deltabeat"
Repository = "https://github.com/alexallmont/deltabeat"
Issues = "https://github.com/alexallmont/deltabeat/issues"
